hphp/hack/test/typecheck/nameof/parsing/nameof_yield.php.exp
ERROR: File "nameof_yield.php", line 5, characters 12-21:
`nameof` can only be used with a class (Parsing[1002])
