hphp/hack/test/typecheck/nameof/parsing/nameof_yield.php
<?hh

class C {
  public static function f(): void {
    nameof yield $foo;
  }
}
